src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>P7S1_Change__c</fullName>
        <description>Innerhalb eines Projektes können Arbeitspakete als Erweiterung oder Änderung gekennzeichnet werden.</description>
        <inlineHelpText>Innerhalb eines Projektes können Arbeitspakete als Erweiterung oder Änderung gekennzeichnet werden.</inlineHelpText>
        <label>Funktionstyp im Projekt</label>
        <picklist>
            <picklistValues>
                <fullName>Änderung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erweiterung</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_DevSandbox__c</fullName>
        <description>Sandbox, where development takes place</description>
        <inlineHelpText>Sandbox, where development takes place</inlineHelpText>
        <label>Sandbox</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtCaseNo__c</fullName>
        <description>externe Ticketnummer, über SalesforceToSalesforce erhalten</description>
        <inlineHelpText>externe Ticketnummer, über SalesforceToSalesforce erhalten</inlineHelpText>
        <label>externe Ticket-Nr.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtDueDate__c</fullName>
        <description>Datum der Fälligkeit des externen Tickets</description>
        <inlineHelpText>Datum der Fälligkeit des externen Tickets</inlineHelpText>
        <label>externe Fälligkeit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtPrio__c</fullName>
        <description>externe Prio, von SalesforceToSalesforce erhalten</description>
        <inlineHelpText>externe Prio, von SalesforceToSalesforce erhalten</inlineHelpText>
        <label>externe Priorität</label>
        <picklist>
            <picklistValues>
                <fullName>Prios von Advendio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtProjektmanager__c</fullName>
        <description>Welcher externer Projektmanager arbeitet an dem Ticket, welches wir über SalesforceToSalesforce erhalten haben</description>
        <inlineHelpText>Welcher externer Projektmanager arbeitet an dem Ticket, welches wir über SalesforceToSalesforce erhalten haben</inlineHelpText>
        <label>externer Projektmanager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtState__c</fullName>
        <description>externer Status, von SalesforceToSalesforce erhalten</description>
        <inlineHelpText>externer Status, von SalesforceToSalesforce erhalten</inlineHelpText>
        <label>externer Status</label>
        <picklist>
            <picklistValues>
                <fullName>externe Status von Advendio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Incident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_KW__c</fullName>
        <description>KW Fälligkeit</description>
        <formula>IF( 
  CEILING( (  Datum_F_lligkeit__c-3  - DATE( YEAR( Datum_F_lligkeit__c-3), 1, 1) + 1) / 7) &gt; 53,
  53,
  CEILING( ( Datum_F_lligkeit__c-3- DATE( YEAR( Datum_F_lligkeit__c-3), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>KW Fälligkeit</inlineHelpText>
        <label>KW Fälligkeit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_LastCaseComment__c</fullName>
        <description>Last Comment on this Case - used for E-Mail notification</description>
        <inlineHelpText>Last Comment on this Case - used for E-Mail notification</inlineHelpText>
        <label>Last Comment on this Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Mitarbeiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mitarbeiter</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_ParentName__c</fullName>
        <description>Thema des übergeordneten Tickets</description>
        <formula>Parent.Subject</formula>
        <inlineHelpText>Thema des übergeordneten Tickets</inlineHelpText>
        <label>Übergeordnetes Thema</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sort__c</fullName>
        <description>Sortierkriterium:
1. offen/geschlossen
2. Projekt
3. Inhaber</description>
        <formula>IF (IsClosed, &apos;1&apos;,&apos;0&apos;) 
&amp; &apos;_&apos; &amp;  TEXT(Projekt__c ) 
&amp; &apos;_&apos; &amp;  Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sortierkriterium:
1. offen/geschlossen
2. Projekt
3. Inhaber</inlineHelpText>
        <label>Sortierung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_TicketinhaberVerbindung__c</fullName>
        <description>Spiegelung des Ticketinhabers als Text, um diese Info an bestehende Verbindungen zu senden (z.B. ADvendio) damit dem Verbindungspartner der Inhaber unseres TIs angezeigt wird (Standardfeld &apos;TI-Inhaber&apos; spiegelt nur die ID, nicht den Namen)</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <inlineHelpText>Spiegelung des Ticketinhabers als Text, um diese Info an bestehende Verbindungen zu senden (z.B. ADvendio) damit dem Verbindungspartner der Inhaber unseres TIs angezeigt wird (Standardfeld &apos;TI-Inhaber&apos; spiegelt nur die ID, nicht den Namen)</inlineHelpText>
        <label>Ticketinhaber-Verbindung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_WertStorypoints__c</fullName>
        <formula>VALUE( TEXT ( Lcm_Complexity__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wert Storypoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projekt__c</fullName>
        <description>Welches Projekt betrifft dieser Vorgang?</description>
        <inlineHelpText>Welches Projekt betrifft dieser Vorgang?</inlineHelpText>
        <label>Projekt</label>
        <picklist>
            <picklistValues>
                <fullName>7Screen</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Advendio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architektur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM-TV</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCM</fullName>
                <color>#333333</color>
            </picklistValues>
            <picklistValues>
                <fullName>Liferay 2 SF</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Media Transparency</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Puls4</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Excellence</fullName>
                <color>#FF99FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>SevenVentures GmbH</fullName>
                <color>#FF99FF</color>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quotient__c</fullName>
        <description>Quotient aus Wert und Aufwand, also Nutzen (hier: wenn vorhanden konkreter Aufwand, sonst geschätzter Aufwand).</description>
        <formula>IF(AND (Wert__c &gt; 0 , Lcm_CaseEffortActual__c &gt; 0), Wert__c  / Lcm_CaseEffortActual__c , 
IF(AND (Wert__c &gt; 0 , Lcm_CaseEffortTarget__c &gt; 0), Wert__c  / Lcm_CaseEffortTarget__c,
0))</formula>
        <inlineHelpText>Quotient aus Wert und Aufwand, also Nutzen (hier: wenn vorhanden konkreter Aufwand, sonst geschätzter Aufwand).</inlineHelpText>
        <label>Quotient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Verhältnis zwischen BusinessValue (Nutzen) und StoryPoints (Komplexität), automatisch berechnet.
Leer, wenn BusinessValue oder StoryPoints leer</description>
        <inlineHelpText>Verhältnis zwischen BusinessValue (Nutzen) und StoryPoints (Komplexität), automatisch berechnet.
Leer, wenn BusinessValue oder StoryPoints leer</inlineHelpText>
        <label>Rank</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank_per_Projekt__c</fullName>
        <description>Ranglistenwert bezüglich der Abarbeitung des Kundenvorganges innerhalb eines konkreten Projektes.</description>
        <formula>if( Rank__c &gt; 0, (Text( Projekt__c) &amp; &quot; &quot; &amp; Text(Rank__c)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ranglistenwert bezüglich der Abarbeitung des Kundenvorganges innerhalb eines konkreten Projektes.</inlineHelpText>
        <label>Rank per Projekt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReOpenDateTime__c</fullName>
        <description>Dieses Feld dient als interne Hilfsfeld für die Berechnung der Bearbeitungszeit des Vorgangs.</description>
        <inlineHelpText>Hier wird automatisch das aktuelle Erstelldatum oder Wiedereröffnungsdatum des Vorgangs eingetragen.</inlineHelpText>
        <label>(Re-)Open Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <description>Kurze Zusammenfassung was die Anforderung war und was (wie) gelöst wurde.</description>
        <inlineHelpText>Kurze Zusammenfassung was die Anforderung war und was (wie) gelöst wurde</inlineHelpText>
        <label>Release-Notes</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCRUM_Phase__c</fullName>
        <description>In welcher Phase steht das Ticket</description>
        <inlineHelpText>In welcher Phase steht das Ticket</inlineHelpText>
        <label>SCRUM-Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Refinement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grooming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>1 - Salesforce/Advendio nicht erreichbar 
2 - Keine Fortführung der Haupttätigkeit möglich 
3 - Verlust wichtiger Funktion (Workarounds &amp; zeitunkritisch)
4 - Service Request</description>
        <inlineHelpText>1 - Salesforce/Advendio nicht erreichbar 
2 - Keine Fortführung der Haupttätigkeit möglich 
3 - Verlust wichtiger Funktion (Workarounds &amp; zeitunkritisch)
4 - Service Request</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Cluster__c</fullName>
        <description>Einteilung der Advendio-Tickets in Cluster</description>
        <inlineHelpText>Einteilung der Advendio-Tickets in Cluster</inlineHelpText>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>AdTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B ADvendio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B SaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DooH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM InPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM InStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting DWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting SaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wert__c</fullName>
        <description>Kalkulierte Ersparnis an Manntage aller betroffener Mitarbeiter in einem Jahr, wenn der Kundenvorgang erfolgreich umgesetzt wäre (Business Value). Kalkulierte Ersparnis an Manntage aller betroffener Mitarbeiter in einem Jahr, wenn der Kundenvorgang erfolgreich umgesetzt wäre (Business Value). Mögliche Umsatzefährdung oder Strafumfänge wegen Missachtung von Gesetzen oder rechtlichen Empfehlungen.</description>
        <inlineHelpText>Kalkulierte Ersparnis an Manntage aller betroffener Mitarbeiter in einem Jahr, wenn der Kundenvorgang erfolgreich umgesetzt wäre (Business Value). Mögliche Umsatzefährdung oder Strafumfänge wegen Missachtung von Gesetzen oder rechtlichen Empfehlungen.</inlineHelpText>
        <label>Wert</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>externer_Link__c</fullName>
        <description>Gibt es ein anderes System in dem dieser Fall ebenfalls auftaucht?</description>
        <inlineHelpText>Gibt es ein anderes System in dem dieser Fall ebenfalls auftaucht?</inlineHelpText>
        <label>externer Link</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>Aktueller_Sprint2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Lcm_RankCombined__c</columns>
        <columns>Lcm_KanbanKombiSorted__c</columns>
        <columns>Lcm_TestResult__c</columns>
        <columns>Lcm_DevelopmentStatus__c</columns>
        <columns>Lcm_ReviewedBy__c</columns>
        <columns>Lcm_DeploymentInstructions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Release__c</field>
            <operation>equals</operation>
            <value>2017_KW23-25 ADvendio</value>
        </filters>
        <label>_ Aktueller Sprint</label>
        <language>en_US</language>
        <sharedTo>
            <group>P7S1_Dev</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>P7S1_ExtState__c</columns>
        <columns>Projekt__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>c) Backlog</label>
        <language>de</language>
        <queue>P7S1_Backlog</queue>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Warteschlange</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Severity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Projekt__c</columns>
        <columns>Lcm_Team__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>a) Warteschlange</label>
        <language>de</language>
        <queue>P7S1_Case</queue>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>a_Alle_k_rzlich_erstellten</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Projekt__c</columns>
        <columns>SomDig_Cluster__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>a) Alle kürzlich erstellten (14 Tage)</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_Alle_offenen_Incidents</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Severity__c</columns>
        <columns>Projekt__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>Lcm_Team__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.P7S1_Incident</value>
        </filters>
        <label>a) Alle offenen Incidents</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_Alle_offenen_Incidents_NonAdv</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Severity__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>Projekt__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>Lcm_Team__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.P7S1_Incident</value>
        </filters>
        <filters>
            <field>Projekt__c</field>
            <operation>notEqual</operation>
            <value>Advendio</value>
        </filters>
        <label>a) Alle offenen Incidents Non-ADV</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>a_Alle_offenen_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Severity__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>Lcm_Team__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <columns>Projekt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>a) Alle offenen Tickets</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_Meine_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Lcm_Release__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Projekt__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>a) Meine Tickets</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_Meine_berf_lligen_TIs</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>Projekt__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Datum_F_lligkeit__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>a) Meine überfälligen Tickets</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_Meine_offenen_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>Lcm_KanbanKombi__c</columns>
        <columns>Projekt__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Rank__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>a) Meine offenen Tickets</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>a_ServiceWeb</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>P7S1_ExtCaseNo__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>P7S1_ExtState__c</columns>
        <columns>Projekt__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>System</value>
        </filters>
        <label>a) ServiceWeb</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>b_ADvendio_Tickets_in_Bearbeitung</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Lcm_RankCombined__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Lcm_Release__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Severity__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>Projekt__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Lcm_KanStation__c</columns>
        <columns>Lcm_KanStatus__c</columns>
        <columns>P7S1_ExtCaseNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Gaser,Wedekind,Voß,Bierkarre,Ropte</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>b) Fa. ADvendio - Tickets in Bearbeitung</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>b_Advendio_offen</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Severity__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Rank__c</columns>
        <columns>Lcm_KanbanKombiSorted__c</columns>
        <columns>Lcm_Release__c</columns>
        <columns>Projekt__c</columns>
        <columns>Lcm_Team__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>SomDig_Cluster__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Projekt__c</field>
            <operation>startsWith</operation>
            <value>Adv</value>
        </filters>
        <label>b) Advendio offen</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>b_CRM_Backlog_offen</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Projekt__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Lcm_Release__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Lcm_KanbanKombiSorted__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Projekt__c</field>
            <operation>notEqual</operation>
            <value>7Screen,Advendio,Prodia Ablöse Österreich</value>
        </filters>
        <filters>
            <field>Projekt__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>b) CRM Backlog offen</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
            <group>P7S1_Dev</group>
            <group>P7S1_SaS_Extern</group>
            <group>P7S1_SphereSomDeAt</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>b_CRM_CurrentSprintg</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Lcm_KanbanKombiSorted__c</columns>
        <columns>Lcm_KanStation__c</columns>
        <columns>Lcm_KanStatus__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Projekt__c</columns>
        <columns>Datum_F_lligkeit__c</columns>
        <columns>P7S1_BusinessValue__c</columns>
        <columns>Lcm_Complexity__c</columns>
        <columns>Rank__c</columns>
        <columns>P7S1_DevSandbox__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Lcm_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_CaseInAktuellemRelease__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.P7S1_Change</value>
        </filters>
        <filters>
            <field>Lcm_Release__c</field>
            <operation>contains</operation>
            <value>CRM</value>
        </filters>
        <label>b) CRM aktueller Sprint</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
            <group>P7S1_Dev</group>
            <group>P7S1_SaS_Extern</group>
            <group>P7S1_SphereSomDeAt</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>P7S1_Change</fullName>
        <active>true</active>
        <businessProcess>P7S1_Change</businessProcess>
        <description>Anforderung, Feature, Funktion</description>
        <label>Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_Incident</fullName>
        <active>true</active>
        <businessProcess>P7S1_Incident</businessProcess>
        <description>Fehler, Störung</description>
        <label>Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_KundenvorgangGeschlossen</fullName>
        <active>true</active>
        <businessProcess>P7S1_Kundenvorgangsstandardprozess</businessProcess>
        <description>Kundenvorgang wurde geschlossen</description>
        <label>P7S1 Kundenvorgang geschlossen</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_KundenvorgangOffen</fullName>
        <active>false</active>
        <businessProcess>P7S1_Kundenvorgangsstandardprozess</businessProcess>
        <description>Kundenvorgang ist offen.</description>
        <label>P7S1 Kundenvorgang offen</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_Problem</fullName>
        <active>true</active>
        <businessProcess>P7S1_Problem</businessProcess>
        <description>Problem, Bug</description>
        <label>Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_Service</fullName>
        <active>true</active>
        <businessProcess>P7S1_Service</businessProcess>
        <description>User Anlage, Support</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lcm_BlockReopenTicket</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id != $Label.ProfileIdAdmin
&amp;&amp; $User.Id != &apos;005D0000001WzTPIA0&apos; 
&amp;&amp; (IsClosed = true || PRIORVALUE(IsClosed) = true)
&amp;&amp; NOT (ISCHANGED(  P7S1_ExtDueDate__c ) )
&amp;&amp; NOT (ISCHANGED(  P7S1_ExtPrio__c ) )
&amp;&amp; NOT (ISCHANGED(  externer_Link__c ) )
&amp;&amp; NOT (ISCHANGED(  P7S1_ExtProjektmanager__c ) )
&amp;&amp; NOT (ISCHANGED(  P7S1_ExtState__c ) )
&amp;&amp; NOT (ISCHANGED(  P7S1_ExtCaseNo__c ) )
&amp;&amp; NOT (ISCHANGED(  P7S1_LastCaseComment__c ) )</errorConditionFormula>
        <errorMessage>Geschlossenes Ticket kann nicht geöffnet oder geändert werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P7S1_AdvProjektAdmin</fullName>
        <active>false</active>
        <description>Es dürfen durch Nicht-Admins keine Tickets in den Projekten 
Adv Betrieb 
Adv Delta Force 
Adv Features 
Adv Modularisierung 
angelegt werden.</description>
        <errorConditionFormula>AND ( 
$User.ProfileId &lt;&gt; $Label.ProfileIdAdmin , 
OR (
ISNEW() ,
ISCHANGED( Projekt__c )
) ,
CASE (TEXT( Projekt__c ), 
&apos;Adv Sonstiges&apos; , 0 , 
&apos;Adv Betrieb&apos; , 1 , 
&apos;Adv Delta Force&apos; , 1 , 
&apos;Adv Features&apos; , 1 , 
&apos;Adv Modularisierung&apos; , 1 , 
0) = 1 
)</errorConditionFormula>
        <errorDisplayField>Projekt__c</errorDisplayField>
        <errorMessage>Es können nur Tickets für das Projekt &quot;Adv Sonstiges&quot; angelegt werden. Die Zuordnung zu den anderen Adv Projekten erfolgt im Refinement!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rank_Dublette</fullName>
        <active>false</active>
        <description>Dubletten im Feld &apos;Rank per Projekt&apos; vermeiden.</description>
        <errorConditionFormula>NOT(ISBLANK((Text( Projekt__c) &amp; &quot; &quot; &amp; Text(Rank__c))))</errorConditionFormula>
        <errorDisplayField>Rank__c</errorDisplayField>
        <errorMessage>Dublette für diesen Rank im jeweiligen Projekt, bitte einen anderen Rank auswählen.</errorMessage>
    </validationRules>
</CustomObject>